--- a/minekingdom/views/layout.pug
+++ b/minekingdom/views/layout.pug
@@ -14,7 +14,7 @@ doctype html
           <ul class="left">
               <li><a href="/"><span>Home</span></a></li>
               <li><a href="/about"><span>About Us</span></a></li>
-              <li><a href="/docs"><span>Documentation</span></a></li>
+              <li><a href="/commands"><span>Commands</span></a></li>
               <li><a href="/team"><span>Meet the Team</span></a></li>
               <li><a href="/contact"><span>Contact</span></a></li>
           </ul>
