--- a/minekingdom/views/team.pug
+++ b/minekingdom/views/team.pug
@@ -49,13 +49,6 @@ block content
         </div>
     </div>
     <div class="team-card">
-        <img src="/images/team/Greg.png" alt="Greg's avatar">
-        <div class="user-info">
-            <span>Greg</span>
-            <p>Spicy jalapeno bacon ipsum dolor amet tri-tip alcatra swine frankfurter chislic, short loin drumstick strip steak tongue meatball brisket pork jowl spare ribs leberkas. Pork chop salami meatloaf rump. Pork belly drumstick spare ribs, pork loin tongue ribeye meatball burgdoggen short loin hamburger. Swine ribeye porchetta shank tongue buffalo venison tri-tip kevin andouille beef. Meatloaf burgdoggen andouille porchetta.</p>
-        </div>
-    </div>
-    <div class="team-card">
         <img src="/images/team/Tra.png" alt="Tra's avatar">
         <div class="user-info">
             <span>Tra</span>
@@ -85,13 +78,6 @@ block content
         </div>
     </div>
     <div class="team-card">
-        <img src="/images/team/Marz.gif" alt="_user_ avatar">
-        <div class="user-info">
-            <span>Marz</span>
-            <p>Spicy jalapeno bacon ipsum dolor amet tri-tip alcatra swine frankfurter chislic, short loin drumstick strip steak tongue meatball brisket pork jowl spare ribs leberkas. Pork chop salami meatloaf rump. Pork belly drumstick spare ribs, pork loin tongue ribeye meatball burgdoggen short loin hamburger. Swine ribeye porchetta shank tongue buffalo venison tri-tip kevin andouille beef. Meatloaf burgdoggen andouille porchetta.</p>
-        </div>
-    </div>
-    <div class="team-card">
         <img src="/images/team/Molovo.png" alt="Molovo's avatar">
         <div class="user-info">
             <span>Molovo</span>
@@ -116,13 +102,6 @@ block content
         <img src="/images/team/TJay.png" alt="TJay's avatar">
         <div class="user-info">
             <span>TJay</span>
-            <p>Spicy jalapeno bacon ipsum dolor amet tri-tip alcatra swine frankfurter chislic, short loin drumstick strip steak tongue meatball brisket pork jowl spare ribs leberkas. Pork chop salami meatloaf rump. Pork belly drumstick spare ribs, pork loin tongue ribeye meatball burgdoggen short loin hamburger. Swine ribeye porchetta shank tongue buffalo venison tri-tip kevin andouille beef. Meatloaf burgdoggen andouille porchetta.</p>
-        </div>
-    </div>
-    <div class="team-card">
-        <img src="/images/team/Toby.gif" alt="Toby's avatar">
-        <div class="user-info">
-            <span>Toby</span>
-            <p>Spicy jalapeno bacon ipsum dolor amet tri-tip alcatra swine frankfurter chislic, short loin drumstick strip steak tongue meatball brisket pork jowl spare ribs leberkas. Pork chop salami meatloaf rump. Pork belly drumstick spare ribs, pork loin tongue ribeye meatball burgdoggen short loin hamburger. Swine ribeye porchetta shank tongue buffalo venison tri-tip kevin andouille beef. Meatloaf burgdoggen andouille porchetta.</p>
+            <p>Hello fellow humans. It is I, supervisor TJay.  This message is not intended to discombobulate you and if it was it was inadvertently. Please show equanimity while reading this. I like food and going to the gym and keeping stuff bona fide.</p>
         </div>
     </div>
