--- a/minekingdom/views/team.pug
+++ b/minekingdom/views/team.pug
@@ -13,27 +13,20 @@ block content
     </div>
     <h2 id="owners">Owners</h2>
     <div class="team-card">
+        <img src="/images/team/GoldWing.gif" alt="Goldwing's avatar">
+        <div class="user-info">
+            <span>GoldWing</span>
+            <p>Hello, I’m GoldWing, but you can call me Jack. Im in my first year of college. I’m currently studying Computer Science and Programming. My experience of management and general staffing started in 2015 when Minecraft was really getting popular. Since then I’ve had many jobs as management and have ventured over into freelancer discords and starting my own businesses with my partner.</p>
+        </div>
+    </div>
+    <div class="team-card">
         <img src="/images/team/Matt.gif" alt="Matt's avatar">
         <div class="user-info">
             <span>Matt</span>
             <p>Hello! My name is Matt and I've been around the MC Community for quite some time now, and I love to develop and configure servers. More recently I have started taking a liking to the management and staff on MC servers. I live in Arizona, so yeah, it does get pretty hot over here. I really enjoy MC and I believe that I am good with that I do and I have the need to share it with others. I try my best to be professional when I need to be, but other times I prefer to hang with the members of any server because that's how they get to love the server even more.</p>
         </div>
     </div>
-    <div class="team-card">
-        <img src="/images/team/GoldWing.gif" alt="Goldwing's avatar">
-        <div class="user-info">
-            <span>GoldWing</span>
-            <p>Spicy jalapeno bacon ipsum dolor amet tri-tip alcatra swine frankfurter chislic, short loin drumstick strip steak tongue meatball brisket pork jowl spare ribs leberkas. Pork chop salami meatloaf rump. Pork belly drumstick spare ribs, pork loin tongue ribeye meatball burgdoggen short loin hamburger. Swine ribeye porchetta shank tongue buffalo venison tri-tip kevin andouille beef. Meatloaf burgdoggen andouille porchetta.</p>
-        </div>
-    </div>
     <h2 id="overseers">Overseers</h2>
-    <div class="team-card">
-        <img src="/images/team/Pingu.png" alt="Pingu's avatar">
-        <div class="user-info">
-            <span>Pingu</span>
-            <p>Hi! My name is Will and I am a College Student from the UK. I'm bisexual with a passion for music and computing. I love listening to Lewis Capaldi, and playing the piano.</p>
-        </div>
-    </div>
     <div class="team-card">
         <img src="/images/team/Danny.gif" alt="Danny's avatar">
         <div class="user-info">
@@ -46,6 +39,13 @@ block content
         <div class="user-info">
             <span>Excalibur</span>
             <p>Hello. You can call me Cali. I'm 19 years old and part of the MineKingdom staff as an Overseer. Hit me up if you want to partner with our marvelous server or anything else you might need help with regarding the bot. Cheers mate!</p>
+        </div>
+    </div>
+    <div class="team-card">
+        <img src="/images/team/Pingu.png" alt="Pingu's avatar">
+        <div class="user-info">
+            <span>Pingu</span>
+            <p>Hi! My name is Will and I am a College Student from the UK. I'm bisexual with a passion for music and computing. I love listening to Lewis Capaldi, and playing the piano.</p>
         </div>
     </div>
     <div class="team-card">
@@ -88,6 +88,13 @@ block content
         <img src="/images/team/Rory.png" alt="Rory's avatar">
         <div class="user-info">
             <span>Rory</span>
+            <p>Spicy jalapeno bacon ipsum dolor amet tri-tip alcatra swine frankfurter chislic, short loin drumstick strip steak tongue meatball brisket pork jowl spare ribs leberkas. Pork chop salami meatloaf rump. Pork belly drumstick spare ribs, pork loin tongue ribeye meatball burgdoggen short loin hamburger. Swine ribeye porchetta shank tongue buffalo venison tri-tip kevin andouille beef. Meatloaf burgdoggen andouille porchetta.</p>
+        </div>
+    </div>
+    <div class="team-card">
+        <img src="/images/team/Scarlett.png" alt="Scarlett's avatar">
+        <div class="user-info">
+            <span>Scarlett</span>
             <p>Spicy jalapeno bacon ipsum dolor amet tri-tip alcatra swine frankfurter chislic, short loin drumstick strip steak tongue meatball brisket pork jowl spare ribs leberkas. Pork chop salami meatloaf rump. Pork belly drumstick spare ribs, pork loin tongue ribeye meatball burgdoggen short loin hamburger. Swine ribeye porchetta shank tongue buffalo venison tri-tip kevin andouille beef. Meatloaf burgdoggen andouille porchetta.</p>
         </div>
     </div>
