Final update to stable build.

--- a/minekingdom/views/contact.pug
+++ b/minekingdom/views/contact.pug
@@ -3,5 +3,7 @@ extends layout
 block content
     <h1 class="page-title">Contact</h1>
     <p>If you need to contact us, please send an email to <a href="mailto:info@minekingdom.io">info@minekingdom.io</a>.</p>
-        </div>
-    </main>
+    <br/>
+    <p>However, if you are in urgent need, please don't hesitate to join our Discord server where someone can better assist you:</p>
+    <br/>
+    <iframe src="https://canary.discordapp.com/widget?id=492972328746090496&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
