--- a/minekingdom/views/layout.pug
+++ b/minekingdom/views/layout.pug
@@ -2,6 +2,15 @@ doctype html
 <html lang="en">
   head
     title= title
+    meta(http-equiv="X-UA-Compatible", content="ie=edge")
+    meta(http-equiv="Content-Type", content="text/html;charset=UTF-8")
+    meta(name="viewport", content="width=device-width, initial-scale=1.0")
+    
+    meta(name="title" content="MineKingdom")
+    meta(name="description" content="Discord Miner is a creative economy and mining simulation bot where you can mine ores to gain money to craft better tools and earn rewards!")
+
+    meta(property="og:title" content="MineKingdom")
+    meta(property="og:description" content="Discord Miner is a creative economy and mining simulation bot where you can mine ores to gain money to craft better tools and earn rewards!")
 
     link(rel="icon", href="/images/icon.png")
     link(rel="stylesheet", href="/stylesheets/style.css")
