--- a/minekingdom/views/team.pug
+++ b/minekingdom/views/team.pug
@@ -102,7 +102,7 @@ block content
         <img src="/images/team/Shifter.gif" alt="Shifter's avatar">
         <div class="user-info">
             <span>Shifter</span>
-            <p>Spicy jalapeno bacon ipsum dolor amet tri-tip alcatra swine frankfurter chislic, short loin drumstick strip steak tongue meatball brisket pork jowl spare ribs leberkas. Pork chop salami meatloaf rump. Pork belly drumstick spare ribs, pork loin tongue ribeye meatball burgdoggen short loin hamburger. Swine ribeye porchetta shank tongue buffalo venison tri-tip kevin andouille beef. Meatloaf burgdoggen andouille porchetta.</p>
+            <p>Hi my name is Shifter. I'm 18, male and from the United Kingdom. I became part of this community a long while back and have been staff for over a year now. I have become friends with many new people along the way (and banned some too) but I'm only here to enforce the rules. Don't break 'em and we can be friends too! So um yeah nothing much else to say here, I'm a YouTuber and I use emojis too often.</p>
         </div>
     </div>
     <div class="team-card">
