--- a/views/error.pug
+++ b/views/error.pug
@@ -5,3 +5,4 @@ block append head
 block app
   h1.page-title Error 404
   span Sorry, we couldn't find that page. It might have been moved or deleted.
+  span=error.stack
