--- a/views/team.pug
+++ b/views/team.pug
@@ -2,7 +2,7 @@ extends layout
 
 mixin card(name, desc)
     .team-card
-        img(src="/images/team/" + name + ".png", alt=name + "'s avatar")
+        img(src="/images/team/" + name + ".pjng", alt=name + "'s avatar")
         .user-info
             span= name
             p= desc
