--- a/public/stylesheets/pages/team.css
+++ b/public/stylesheets/pages/team.css
@@ -2,6 +2,8 @@
     display: flex;
     justify-content: center;
     margin: 15px 0px;
+    border-bottom: 2px solid #000;
+    padding-bottom: 15px;
 }
 
 .team-card img {
@@ -18,6 +20,18 @@
     margin-left: 15px;
     flex: 1;
 }
+#founders span::before { content: 'Founder'; }
+#owners span::before { content: 'Owner'; }
+#overseers span::before { content: 'Overseer'; }
+#guardians span::before { content: 'Guardian'; }
+#supervisors span::before { content: 'Supervisor'; }
+
+#founders span { color: #a13eff; }
+#owners span { color: #a13eff; }
+#overseers span { color: #ff3e4e; }
+#guardians span { color: #ff753e; }
+#supervisors span { color: #ff3e85; }
+
 @media only screen and (min-width: 768px) {
     .team-card {
         display: flex;
