--- a/views/layout.pug
+++ b/views/layout.pug
@@ -30,7 +30,7 @@ doctype html
               a(href="/commands")
                 span Commands
               a(href="/team")
-                span Meet the Team
+                span Team
               a(href="/contact")
                 span Contact
           ul.right
@@ -43,6 +43,7 @@ doctype html
                 span Discord
     main
       .app
+        h1.page-title= title
         block app
     footer
       block footer
