--- a/views/team.pug
+++ b/views/team.pug
@@ -1,36 +1,44 @@
 extends layout
 
-mixin card(name, desc)
+mixin card(hasNitro, name, desc)
+    - let imgExt = hasNitro == 0 ? `.png`: hasNitro == 1 ? `.jpg`: `.gif`;
     .team-card
-        img(src="/images/team/" + name + ".pjng", alt=name + "'s avatar")
+        img(src="/images/team/" + name + imgExt, alt=name + "'s avatar")
         .user-info
-            span= name
+            span= ` | ${name}`
             p= desc
 
 block append head
     link(rel="stylesheet", href="/stylesheets/pages/team.css")
 block app
-    h2#founder Founder
-    +card(`Jaii`, `Spicy jalapeno bacon ipsum dolor amet tri-tip alcatra swine frankfurter chislic, short loin drumstick strip steak tongue meatball brisket pork jowl spare ribs leberkas. Pork chop salami meatloaf rump. Pork belly drumstick spare ribs, pork loin tongue ribeye meatball burgdoggen short loin hamburger. Swine ribeye porchetta shank tongue buffalo venison tri-tip kevin andouille beef. Meatloaf burgdoggen andouille porchetta.`)
-    +card(`Stefan`, `Spicy jalapeno bacon ipsum dolor amet tri-tip alcatra swine frankfurter chislic, short loin drumstick strip steak tongue meatball brisket pork jowl spare ribs leberkas. Pork chop salami meatloaf rump. Pork belly drumstick spare ribs, pork loin tongue ribeye meatball burgdoggen short loin hamburger. Swine ribeye porchetta shank tongue buffalo venison tri-tip kevin andouille beef. Meatloaf burgdoggen andouille porchetta.`)
+    #founders
+        h2 Founders
+        +card(2, `Bella`, `Lorem bacon omlette dolor amet tri-tip alcatra swine frankfurter chislic, short loin drumstick strip steak tongue meatball brisket pork jowl spare ribs leberkas. Pork chop salami meatloaf rump. Pork belly drumstick spare ribs, pork loin tongue ribeye meatball burgdoggen short loin hamburger. Swine ribeye porchetta shank tongue buffalo venison tri-tip kevin andouille beef. Meatloaf burgdoggen andouille porchetta.`)
+        +card(0, `Jaii`, `Spicy jalapeno bacon ipsum dolor amet tri-tip alcatra swine frankfurter chislic, short loin drumstick strip steak tongue meatball brisket pork jowl spare ribs leberkas. Pork chop salami meatloaf rump. Pork belly drumstick spare ribs, pork loin tongue ribeye meatball burgdoggen short loin hamburger. Swine ribeye porchetta shank tongue buffalo venison tri-tip kevin andouille beef. Meatloaf burgdoggen andouille porchetta.`)
 
-    h2#owners Owners
-    +card(`Bella`, `Spicy jalapeno bacon ipsum dolor amet tri-tip alcatra swine frankfurter chislic, short loin drumstick strip steak tongue meatball brisket pork jowl spare ribs leberkas. Pork chop salami meatloaf rump. Pork belly drumstick spare ribs, pork loin tongue ribeye meatball burgdoggen short loin hamburger. Swine ribeye porchetta shank tongue buffalo venison tri-tip kevin andouille beef. Meatloaf burgdoggen andouille porchetta.`)
-    +card(`GoldWing`, `Hello, I’m GoldWing, but you can call me Jack. Im in my first year of college. I’m currently studying Computer Science and Programming. My experience of management and general staffing started in 2015 when Minecraft was really getting popular. Since then I’ve had many jobs as management and have ventured over into freelancer discords and starting my own businesses with my partner.`)
-    +card(`Matt`, `Hello! My name is Matt and I've been around the MC Community for quite some time now, and I love to develop and configure servers. More recently I have started taking a liking to the management and staff on MC servers. I live in Arizona, so yeah, it does get pretty hot over here. I really enjoy MC and I believe that I am good with that I do and I have the need to share it with others. I try my best to be professional when I need to be, but other times I prefer to hang with the members of any server because that's how they get to love the server even more.`)
+    #owners
+        h2 Owners
+        +card(2, `Jack`, `Hello, I’m GoldWing, but you can call me Jack. Im in my first year of college. I’m currently studying Computer Science and Programming. My experience of management and general staffing started in 2015 when Minecraft was really getting popular. Since then I’ve had many jobs as management and have ventured over into freelancer discords and starting my own businesses with my partner.`)
+        +card(2, `Matt`, `Hello! My name is Matt and I've been around the MC Community for quite some time now, and I love to develop and configure servers. More recently I have started taking a liking to the management and staff on MC servers. I live in Arizona, so yeah, it does get pretty hot over here. I really enjoy MC and I believe that I am good with that I do and I have the need to share it with others. I try my best to be professional when I need to be, but other times I prefer to hang with the members of any server because that's how they get to love the server even more.`)
 
-    h2#overseers Overseers
-    +card(`DamienVesper`, `Hey there, I'm Damien. My favorite thing to do is program, and I've been a web developer for 4 years now, and the reason that I'm here is so that you can see the site that you're looking at now right in front of you!`)
-    +card(`Danny`, `Spicy jalapeno bacon ipsum dolor amet tri-tip alcatra swine frankfurter chislic, short loin drumstick strip steak tongue meatball brisket pork jowl spare ribs leberkas. Pork chop salami meatloaf rump. Pork belly drumstick spare ribs, pork loin tongue ribeye meatball burgdoggen short loin hamburger. Swine ribeye porchetta shank tongue buffalo venison tri-tip kevin andouille beef. Meatloaf burgdoggen andouille porchetta.`)
-    +card(`Excalibur`, `Hello. You can call me Cali. I'm 19 years old and part of the MineKingdom staff as an Overseer. Hit me up if you want to partner with our marvelous server or anything else you might need help with regarding the bot. Cheers mate!`)
-    +card(`Pingu`, `Hi! My name is Will and I am a College Student from the UK. I'm bisexual with a passion for music and computing. I love listening to Lewis Capaldi, and playing the piano.`)
-    +card(`Tra`, `Hey, I’m Tra! I am currently 17 years old and I am from Asia. (Singapore to be precise.) I have always loved being able yo help others, which is why I applied to join the team. I look forward to many more memories here and hope to see some of you apply in the future!`)
+    #overseers
+        h2 Overseers
+        +card(0, `DamienVesper`, `Hey there, I'm Damien. My favorite thing to do is program, and I've been a web developer for 4 years now, and the reason that I'm here is so that you can see the site that you're looking at now right in front of you!`)
+        +card(2, `Danny`, `Spicy jalapeno bacon ipsum dolor amet tri-tip alcatra swine frankfurter chislic, short loin drumstick strip steak tongue meatball brisket pork jowl spare ribs leberkas. Pork chop salami meatloaf rump. Pork belly drumstick spare ribs, pork loin tongue ribeye meatball burgdoggen short loin hamburger. Swine ribeye porchetta shank tongue buffalo venison tri-tip kevin andouille beef. Meatloaf burgdoggen andouille porchetta.`)
+        +card(1, `Excalibur`, `Hello. You can call me Cali. I'm 19 years old and part of the MineKingdom staff as an Overseer. Hit me up if you want to partner with our marvelous server or anything else you might need help with regarding the bot. Cheers mate!`)
+        +card(0, `Greg`, `Spicy jalapeno bacon ipsum dolor amet tri-tip alcatra swine frankfurter chislic, short loin drumstick strip steak tongue meatball brisket pork jowl spare ribs leberkas. Pork chop salami meatloaf rump. Pork belly drumstick spare ribs, pork loin tongue ribeye meatball burgdoggen short loin hamburger. Swine ribeye porchetta shank tongue buffalo venison tri-tip kevin andouille beef. Meatloaf burgdoggen andouille porchetta.`)
 
-    h2#supervisors Supervisors
-    +card(`Das_Unterstrich`, `Hello, I'm Das. I'm your average German guy who spends way too much time on Discord and loves swimming. I joined Discord late 2017, and this server in early 2019 with getting Supervisor just a few weeks after my join. This server is one of my favourite servers of all time and I would like to see you on it as well, so join today!`)
-    +card(`Geogamer2019`, `Hey, I'm Geo, I joined discord in 2018, I consider myself a friendly person, useful in some situations and stupid in others.`)
-    +card(`Molovo`, `I am Marvin, a 19-year old German guy, who is a big fan of football and who loves to help other people! I have been on Discord since 2016 and spend as much time as possible on there! I am friendly and helpful to everyone who asks to help and love to play a lot of games on PC.`)
-    +card(`Rory`, `Hi, I’m Rory, I am 15 years of age and I live in the USA. My favorite sports to play are baseball, basketball and American football. My favorite subject is math, English is the worst subject ever.`)
-    +card(`Scarlett`, `Spicy jalapeno bacon ipsum dolor amet tri-tip alcatra swine frankfurter chislic, short loin drumstick strip steak tongue meatball brisket pork jowl spare ribs leberkas. Pork chop salami meatloaf rump. Pork belly drumstick spare ribs, pork loin tongue ribeye meatball burgdoggen short loin hamburger. Swine ribeye porchetta shank tongue buffalo venison tri-tip kevin andouille beef. Meatloaf burgdoggen andouille porchetta.`)
-    +card(`Shifter`, `Hi my name is Shifter. I'm 18, male and from the United Kingdom. I became part of this community a long while back and have been staff for over a year now. I have become friends with many new people along the way (and banned some too) but I'm only here to enforce the rules. Don't break 'em and we can be friends too! So um yeah nothing much else to say here, I'm a YouTuber and I use emojis too often.`)
-    +card(`TJay`, `Hello fellow humans. It is I, supervisor TJay.  This message is not intended to discombobulate you and if it was it was inadvertently. Please show equanimity while reading this. I like food and going to the gym and keeping stuff bona fide.`)
+    #guardians
+        h2 Guardians
+        +card(0, `Pingu`, `Hi! My name is Will and I am a college student from the UK. I'm bisexual with a passion for music and computing. I love listening to Lewis Capaldi, and playing the piano.`)
+        +card(0, `Rory`, `Hi, I’m Rory, I am 15 years old and I live in the USA. My timezone is EST, and I’m always willing to help you out, whether it be something with the bot or something unrelated, my DMs are open! Anyway, I love to play baseball, basketball, and American football, and my favorite video games to play is NBA2K, madden, and Minecraft. Happy mining!`)
+        +card(0, `Tra`, `Hey, I’m Tra! I am currently 17 years old and I am from Asia. (Singapore to be precise.) I have always loved being able yo help others, which is why I applied to join the team. I look forward to many more memories here and hope to see some of you apply in the future!`)
+
+    #supervisors
+        h2 Supervisors
+        +card(0, `Das_Unterstrich`, `Hello, I'm Das. I'm your average German guy who spends way too much time on Discord and loves swimming. I joined Discord late 2017, and this server in early 2019 with getting Supervisor just a few weeks after my join. This server is one of my favourite servers of all time and I would like to see you on it as well, so join today!`)
+        +card(2, `Geogamer2019`, `Hey, I'm Geo, I joined discord in 2018, I consider myself a friendly person, useful in some situations and stupid in others.`)
+        +card(0, `Molovo`, `I am Marvin, a 19-year old German guy, who is a big fan of football and who loves to help other people! I have been on Discord since 2016 and spend as much time as possible on there! I am friendly and helpful to everyone who asks to help and love to play a lot of games on PC.`)
+        +card(0, `Scarlett`, `Spicy jalapeno bacon ipsum dolor amet tri-tip alcatra swine frankfurter chislic, short loin drumstick strip steak tongue meatball brisket pork jowl spare ribs leberkas. Pork chop salami meatloaf rump. Pork belly drumstick spare ribs, pork loin tongue ribeye meatball burgdoggen short loin hamburger. Swine ribeye porchetta shank tongue buffalo venison tri-tip kevin andouille beef. Meatloaf burgdoggen andouille porchetta.`)
+        +card(2, `Shifter`, `Hi my name is Shifter. I'm 18, male and from the United Kingdom. I became part of this community a long while back and have been staff for over a year now. I have become friends with many new people along the way (and banned some too) but I'm only here to enforce the rules. Don't break 'em and we can be friends too! So um yeah nothing much else to say here, I'm a YouTuber and I use emojis too often.`)
+        +card(0, `TJay`, `Hello fellow humans. It is I, supervisor TJay.  This message is not intended to discombobulate you and if it was it was inadvertently. Please show equanimity while reading this. I like food and going to the gym and keeping stuff bona fide.`)
