👗🕌 Updated with Glitch

--- a/views/contact.pug
+++ b/views/contact.pug
@@ -1,7 +1,6 @@
 extends layout
 
-block content
-    <h1 class="page-title">Contact</h1>
+block app
     <p>If you need to contact us, please send an email to <a href="mailto:info@minekingdom.io">info@minekingdom.io</a>.</p>
     <br/>
     <p>However, if you are in urgent need, please don't hesitate to join our Discord server where someone can better assist you:</p>
